--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.2.3",
     "postcss": "^8.5.6",
     "prosemirror-markdown": "^1.13.2",
     "react": "19.1.0",
@@ -78,6 +80,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20.19.19",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
