--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/render": "^1.3.2",
     "@tiptap/extension-code-block": "^3.6.5",
     "@tiptap/extension-color": "^3.6.5",
     "@tiptap/extension-highlight": "^3.6.5",
@@ -74,6 +75,7 @@
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
+    "react-email": "^4.3.0",
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
