fix: package.json migrate deploy

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "postinstall": "prisma generate",
+    "vercel-build": "prisma migrate deploy && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
