fix: prisma generate package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "postinstall": "prisma generate --no-engine",
+    "postinstall": "prisma generate",
     "vercel-build": "prisma migrate deploy && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
