--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.20",
-    "@ai-sdk/openai": "^2.0.48",
+    "@ai-sdk/groq": "^2.0.24",
+    "@ai-sdk/openai": "^2.0.52",
+    "@deepgram/sdk": "^4.11.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.9.2",
+    "@module-federation/nextjs-mf": "^8.8.42",
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -66,9 +69,11 @@
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.44.2",
     "input-otp": "^1.4.2",
+    "lamejs": "^1.2.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "openai": "^6.3.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "postcss": "^8.5.6",
